modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/css/categorization/Categorization.scss
.categorization-section {
	.categorization-title {
		color: #272833;
		font-size: 25px;
		font-weight: 500;
	}

	.categorization-toolbar {
		border-style: none;
	}

	.cms-parent-container {
		height: calc(100vh - 6rem - var(--control-menu-container-height, 0));

		.cms-container-child {
			height: 100%;
		}
	}

	.edit-vocabulary {
		.asset-icon {
			padding-right: 15px;
		}

		.categorization-vertical-nav {
			background-color: #f7f8f9;
			border-right: 0.5px solid;
			border-right-color: #9393a4;
			max-width: 300px;
		}

		.management-bar {
			border-bottom-color: #9393a4;
			border-bottom-width: 0.5px;
		}

		.vertical-nav-content-wrapper {
			max-width: 834px;
			padding-left: 150px;

			.form-group {
				border: 1px solid;
				border-color: #e2e4ea;
				border-radius: 8px;
				margin: 24px;
				padding: 24px;
			}

			.form-title {
				font-size: 24px;
				font-weight: 500;
			}
		}
	}
}

